# os-clean

./: README.md  install.sh  pyproject.toml
scripts/: aliases.sh
src/os_clean/: __init__.py  __main__.py  cli.py  disk.py  ui.py
src/os_clean/modules/: __init__.py  downloads.py  journals.py  kernels.py
